--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.0.2",
     "@prisma/client": "^6.2.1",
+    "date-fns": "^4.1.0",
     "next": "^14.2.15",
     "next-auth": "^4.24.8",
     "react": "^18",
@@ -29,7 +30,11 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "prisma": "^6.2.1",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seedData/dbInject.ts"
   }
 }
